#740: replace any use of Unirest 3 with Unirest 4